2025R2/Mechanical-ACT-API-25R2/api/ansys/mechanical/stubs/v251/Ansys/ACT/Automation/Mechanical/FE/CDB/LocalCommand.md
# `LocalCommand`

<a id="ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.FE.CDB.LocalCommand"></a>

#### *class* Ansys.ACT.Automation.Mechanical.FE.CDB.LocalCommand

Bases: [`object`](https://docs.python.org/3/library/functions.html#object)

Represents a LOCAL command.

<!-- !! processed by numpydoc !! -->

<a id="overview"></a>

## Overview

### Properties

| Name | Description |
|----------------------------------|------------------------------------------|
| [`Cstyp`](#LocalCommand.Cstyp)   | Gets the system type.                    |
| [`Index`](#LocalCommand.Index)   | Gets the command index.                  |
| [`Name`](#LocalCommand.Name)     | Gets the command name.                   |
| [`Ncsy`](#LocalCommand.Ncsy)     | Gets the system number.                  |
| [`Type`](#LocalCommand.Type)     | Gets the type of the data to be defined. |
| [`Values`](#LocalCommand.Values) | Gets the values.                         |

<a id="property-detail"></a>

## Property detail

<a id="LocalCommand.Cstyp"></a>

### *property* LocalCommand.Cstyp *: [int](https://docs.python.org/3/library/functions.html#int) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the system type.

<!-- !! processed by numpydoc !! -->

<a id="LocalCommand.Index"></a>

### *property* LocalCommand.Index *: [int](https://docs.python.org/3/library/functions.html#int) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the command index.

<!-- !! processed by numpydoc !! -->

<a id="LocalCommand.Name"></a>

### *property* LocalCommand.Name *: [str](https://docs.python.org/3/library/stdtypes.html#str) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the command name.

<!-- !! processed by numpydoc !! -->

<a id="LocalCommand.Ncsy"></a>

### *property* LocalCommand.Ncsy *: [int](https://docs.python.org/3/library/functions.html#int) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the system number.

<!-- !! processed by numpydoc !! -->

<a id="LocalCommand.Type"></a>

### *property* LocalCommand.Type *: [str](https://docs.python.org/3/library/stdtypes.html#str) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the type of the data to be defined.

<!-- !! processed by numpydoc !! -->

<a id="LocalCommand.Values"></a>

### *property* LocalCommand.Values *: [tuple](https://docs.python.org/3/library/stdtypes.html#tuple)[[float](https://docs.python.org/3/library/functions.html#float)] | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the values.

<!-- !! processed by numpydoc !! -->

